<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_received"
                android:layout_width="410sp"
                android:layout_height="410sp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="tools:sample/avatar" />

        </FrameLayout>

        <TextView
            android:id="@+id/name_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="Borobudur"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text="Magelang" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text=","
                />

            <TextView
                android:id="@+id/country_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text=" Indonesia"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/desc_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@color/black"
            android:text="The palace was the official residence of the royal family of Ubud. It was on his travels that Rsi Markandya received a divine revelation that in Bali he was to bury five precious metals on a mountain slope where the mother temple of Besakih now stands today. Along with a group of followers, Rsi Markandya was magnetically attracted to a destination located in the central foothills of the island that radiated light and energy. This place was Campuhan in Ubud at a junction in the Wos River and it was here that he felt compelled to build a temple by the name of Pura Gunung Lebah" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Charateristic"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/categories_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:text="@string/history" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:text="124" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/status" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:text="Available" />
            </TableRow>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/book"
                    />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/back"
                    />

                <Button
                    android:id="@+id/action_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/share"
                    />
            </LinearLayout>

        </TableLayout>
    </LinearLayout>
</ScrollView>